# elianeduperrex-cppcourse-brunel

cs116-2017-Eliane-Duperrex-master/: .gitignore  README.md
cs116-2017-Eliane-Duperrex-master/Neuron/Part1/src/: constant.hpp  main  main.cpp  neuron.cpp  neuron.hpp  times_spike
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/doc/doxygen-1.8.13/: .gitignore
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/doc/gtest/: CTestTestfile.cmake  cmake_install.cmake
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/res/: times_spike.txt
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/res/html/: annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classes.html  constant_8hpp.html  constant_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  namespacespike__graph.html  network_8cpp.html  network_8hpp.html  network_8hpp_source.html  neuron_8cpp.html  neuron_8hpp.html  neuron_8hpp_source.html  spike__graph_8py.html  test_8cpp.html
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/res/latex/: classNetwork.tex  classNeuron.tex  constant_8hpp.tex  files.tex  main_8cpp.tex  namespaces.tex  namespacespike__graph.tex  network_8cpp.tex  network_8hpp.tex  neuron_8cpp.tex  neuron_8hpp.tex  refman.tex  spike__graph_8py.tex  test_8cpp.tex
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/src/: CMakeLists.txt  Doxyfile  Doxyfile.in  constant.hpp  main.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  spike_graph.py  spike_graph.py~  test.cpp
cs116-2017-Eliane-Duperrex-master/Neuron/Part2/src/gtest/: Makefile
(+41 files in other folders)
